Fixed #contact bleed

--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -438,4 +438,7 @@ nav a {
 #logo {
 	margin: -15px;
 }
+#contact {
+	margin: -15px;
+}
 }
